--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
