--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Presensi
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:V7KLfDXw6cVdY/Vwo99wXWMPbzITD3jtVW79yMs39SA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,16 +10,16 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=absensi2
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=563000
 
 MEMCACHED_HOST=127.0.0.1
 
