--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "maatwebsite/excel": "^3.1",
+        "maatwebsite/excel": "^3.1.57",
+        "phpoffice/phpspreadsheet": "^1.29.1",
+        "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^4.0",
         "silviolleite/laravelpwa": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
