--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "laravel-echo": "^2.2.4",
+        "pusher-js": "^8.4.0"
     }
 }
